# knowledge_graph_langgraph

./: .gitignore  Dockerfile.api  Dockerfile.ingestion  docker-compose.yml  main.py  pyproject.toml  test.py
config/: settings.py
core/: document_processor.py  embeddings.py  knowledge_graph.py  retriever.py
server/: server.py
server/api/routes/: documents.py  health.py
server/core/: ingest.py
server/minio_client/: client.py
server/services/: injestion_service.py
