[project]
name = "graphmemory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "llama-cloud-services>=0.6.50",
    "llama-index>=0.12.50",
    "llama-index-graph-stores-neo4j>=0.4.6",
    "nest-asyncio>=1.6.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.35.0",
]
